--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Include your project-specific ignores in this file
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
-
+.idea
 build
 database.sqlite
 node_modules
@@ -8,4 +8,3 @@ ncp-debug.log
 npm-debug.log
 stats.json
 report.html
-dictionaries
