--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "babel-template": "^6.22.0",
-    "babel-types": "^6.22.0",
+    "babel-types": "^6.22.0"
   },
   "devDependencies": {
     "browser-sync": "^2.18.7",
