--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   ],
   "dependencies": {
     "awaitify": "^0.9.9",
-    "babel-cli": "^6.23.0",
     "babel-polyfill": "^6.22.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
@@ -51,9 +50,12 @@
     "source-map-support": "^0.4.11",
     "sqlite3": "^3.1.8",
     "universal-router": "^2.0.0",
-    "whatwg-fetch": "^2.0.2",
+    "whatwg-fetch": "^2.0.2"
+  },
+  "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.2",
+    "babel-cli": "^6.22.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
@@ -64,9 +66,7 @@
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "babel-template": "^6.22.0",
-    "babel-types": "^6.22.0"
-  },
-  "devDependencies": {
+    "babel-types": "^6.22.0",
     "browser-sync": "^2.18.7",
     "chai": "^3.5.0",
     "chokidar": "^1.6.1",
