--- a/package.json
+++ b/package.json
@@ -213,16 +213,16 @@
     "lint": "yarn run lint:js && yarn run lint:css",
     "test": "mocha \"src/**/*.test.js\" --require babel-register --require test/setup.js",
     "test:watch": "yarn run test -- --reporter min --watch",
-    "clean": "babel-node tools/run clean",
-    "copy": "babel-node tools/run copy",
-    "bundle": "babel-node tools/run bundle",
-    "build": "babel-node tools/run build",
+    "clean": "./node_modules/.bin/babel-node tools/run clean",
+    "copy": "./node_modules/.bin/babel-node tools/run copy",
+    "bundle": "./node_modules/.bin/babel-node tools/run bundle",
+    "build": "./node_modules/.bin/babel-node tools/run build",
     "build:stats": "yarn run build -- --release --analyse",
-    "deploy": "babel-node tools/run deploy",
-    "render": "babel-node tools/run render",
-    "serve": "babel-node tools/run runServer",
-    "babel-start": "babel-node tools/run start",
-    "postinstall": "babel-node tools/run build --release",
+    "deploy": "./node_modules/.bin/babel-node tools/run deploy",
+    "render": "./node_modules/.bin/babel-node tools/run render",
+    "serve": "./node_modules/.bin/babel-node tools/run runServer",
+    "babel-start": "./node_modules/.bin/babel-node tools/run start",
+    "postinstall": "./node_modules/.bin/babel-node tools/run build --release",
     "start": "node build/server.js"
   }
 }
