--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "awaitify": "^0.9.9",
+    "babel": "^6.23.0",
     "babel-cli": "^6.23.0",
     "babel-polyfill": "^6.22.0",
     "bluebird": "^3.4.7",
