--- a/package.json
+++ b/package.json
@@ -218,13 +218,13 @@
     "clean": "./node_modules/.bin/babel-node tools/run clean",
     "copy": "./node_modules/.bin/babel-node tools/run copy",
     "bundle": "./node_modules/.bin/babel-node tools/run bundle",
-    "build": "./node_modules/.bin/babel-node tools/run build",
+    "build": "NODE_ENV=production ./node_modules/.bin/babel-node tools/run build",
     "build:stats": "yarn run build -- --release --analyse",
     "deploy": "./node_modules/.bin/babel-node tools/run deploy",
     "render": "./node_modules/.bin/babel-node tools/run render",
     "serve": "./node_modules/.bin/babel-node tools/run runServer",
     "babel-start": "./node_modules/.bin/babel-node tools/run start",
-    "postinstall": "./node_modules/.bin/babel-node tools/run build --release",
-    "start": "node build/server.js"
+    "postinstall": "NODE_ENV=production ./node_modules/.bin/babel-node tools/run build --release",
+    "start": "NODE_ENV=production node build/server.js"
   }
 }
