--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.2",
+    "babel": "^6.23.0",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.0",
     "babel-eslint": "^7.1.1",
