--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "engines": {
-    "node": "6.9.4",
+    "node": ">=6.5",
     "npm": ">=3.10"
   },
   "browserslist": [
@@ -14,6 +14,7 @@
   ],
   "dependencies": {
     "awaitify": "^0.9.9",
+    "babel-cli": "^6.23.0",
     "babel-polyfill": "^6.22.0",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
@@ -55,13 +56,12 @@
   "devDependencies": {
     "assets-webpack-plugin": "^3.5.1",
     "autoprefixer": "^6.7.2",
-    "babel": "^6.23.0",
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.0",
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-plugin-rewire": "^1.0.0",
-    "babel-preset-env": "^1.1.10",
+    "babel-preset-env": "^1.1.8",
     "babel-preset-react": "^6.22.0",
     "babel-preset-react-optimize": "^1.0.1",
     "babel-preset-stage-2": "^6.22.0",
@@ -214,16 +214,15 @@
     "lint": "yarn run lint:js && yarn run lint:css",
     "test": "mocha \"src/**/*.test.js\" --require babel-register --require test/setup.js",
     "test:watch": "yarn run test -- --reporter min --watch",
-    "clean": "./node_modules/.bin/babel-node tools/run clean",
-    "copy": "./node_modules/.bin/babel-node tools/run copy",
-    "bundle": "./node_modules/.bin/babel-node tools/run bundle",
-    "build": "NODE_ENV=production ./node_modules/.bin/babel-node tools/run build",
+    "clean": "babel-node tools/run clean",
+    "copy": "babel-node tools/run copy",
+    "bundle": "babel-node tools/run bundle",
+    "build": "babel-node tools/run build",
     "build:stats": "yarn run build -- --release --analyse",
-    "deploy": "./node_modules/.bin/babel-node tools/run deploy",
-    "render": "./node_modules/.bin/babel-node tools/run render",
-    "serve": "./node_modules/.bin/babel-node tools/run runServer",
-    "babel-start": "./node_modules/.bin/babel-node tools/run start",
-    "posstinstall": "./node_modules/.bin/babel-node tools/run build --release",
-    "start": "./node_modules/.bin/babel-node tools/run start"
+    "deploy": "babel-node tools/run deploy",
+    "render": "babel-node tools/run render",
+    "serve": "babel-node tools/run runServer",
+    "babel-start": "babel-node tools/run start",
+    "start": "node build/server.js"
   }
 }
